# bunny-sql-assistant

./: .gitignore  Cargo.toml  Dockerfile  README.md  ci.yml
.github/workflows/: ci.yml
.sqlx/: query-2dd43fe9595aa16cd87dfe8759cca59a4c4f34ce04b062b7e0c2cf4f1bc92e4a.json
src/: ai.rs  config.rs  db.rs  main.rs
