[package]
name = "bunnysql"
version = "0.1.0"
edition = "2021"
authors = ["Albany Siswanto <albanysiswantoo@gmail.com>"]
description = "🐰 Bunny SQL Assistant is a CLI tool that converts natural language into SQL."
license = "MIT"
repository = "https://github.com/albanysiswanto/bunny-sql-assistant.git"
readme = "README.md"
keywords = ["sql", "llm", "cli", "assistant", "ollama"]
categories = ["command-line-utilities", "database"]

# Optional but recommended
homepage = "https://github.com/albanysiswanto/bunny-sql-assistant.git"


[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "sqlite",
    "runtime-tokio",
    "macros",
] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
prettytable-rs = "0.10.0"
serde_json = "1.0.140"
indicatif = "0.18"
colored = "3"
tabled = "0.20.0"
